<resources>
    <string name="app_name">مادو</string>
    <string name="bottom_navigation_tab_home">خانه</string>
    <string name="bottom_navigation_tab_user">کاربر</string>
    <string name="bottom_navigation_tab_search">جست و جو</string>
    <string name="bottom_navigation_tab_heart">علاقه مندی</string>
    <string name="bottom_navigation_tab_add">اضافه کردن</string>

    <string name="default_notification_channel_id">chanell_id</string>
    <string name="fcm_message">fcm_message</string>
    <string name="default_notification_channel_name">chanelName</string>
    <string name="msg_subscribed">subscribed</string>
    <string name="msg_subscribe_failed">subscrbed fail</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>


    <string name="hello_blank_fragment">Home</string>
    <string name="login">ورود</string>
    <string name="register">ثبت نام</string>
    <string name="name">نام</string>
    <string name="family">نام خانوادگی</string>
    <string name="username">نام کاربری</string>
    <string name="password">پسورد</string>
    <string name="doNotHaveAcc">حساب کاربری ندارید ؟</string>
    <string name="createAcc">ایجاد حساب کاربری</string>
    <string name="simple_fragment_transition">trans</string>
    <string name="no_internet_error_msg">اینترنت در دسترس نیست</string>

    <string name="kamaEnglish"> , </string>
    <string name="title_activity_add_rule">AddRule</string>

    <string name="permission_request_denied">Permission request denied</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="title_activity_google_maps">Map</string>


    <string name="day_close">تعطیل</string>
    <string name="day_open">باز است</string>

    <string name="chooseCategory">انتخاب دسته بندی</string>
    <string name="searching">در حال جست و جو</string>
    <string name="notFound">موردی یافت نشد</string>
    <string name="clear">پاک کردن</string>
    <string name="search">جستجو</string>
    <string name="filtering">فیلتر کردن</string>
    <string name="filter_now">فیلتر کن</string>

    <string name="nearest">نزدیک ترین</string>
    <string name="max_sore">بیشترین امتیاز</string>
    <string name="max_seen">بیشترین بازدید</string>


    <!-- Error Handling -->
    <string name="TimeoutError">TimeoutError</string>
    <string name="NoConnectionError">NoConnectionError</string>
    <string name="AuthFailureError">AuthFailureError</string>
    <string name="ServerError">ServerError</string>
    <string name="NetworkError">NetworkError</string>
    <string name="ParseError">ParseError</string>
    <string name="JSONException">JSONException</string>
    <string name="UNKNOWN">UNKNOWN</string>
    <string name="ad">ad</string>
    <string name="hasٍError">خطایی رخ داده است</string>
    <string name="close">بستن</string>

</resources>
