<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".BottomSheet.BottomSheetAddPersonnel">

    <com.ali.rnp.khodemon.MyLibrary.MyTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_100"
        android:drawablePadding="25dp"
        android:padding="15dp"
        android:text="مرتب کردن بر اساس ..."
        app:drawableRightCompat="@drawable/ic_sort"
        android:textSize="@dimen/small_textSize_sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_300" />

    <com.ali.rnp.khodemon.MyLibrary.MyTextView
        android:id="@+id/btm_sht_sort_nearest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/click_primary"
        android:clickable="true"
        android:text="@string/nearest"
        android:drawablePadding="25dp"
        android:focusable="true"
        android:padding="15dp"
        app:drawableRightCompat="@drawable/ic_near"
        android:textSize="@dimen/small_textSize_sp" />


    <com.ali.rnp.khodemon.MyLibrary.MyTextView
        android:id="@+id/btm_sht_sort_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/click_primary"
        android:clickable="true"
        android:text="@string/max_sore"
        android:drawablePadding="25dp"
        android:focusable="true"
        android:padding="15dp"
        app:drawableRightCompat="@drawable/ic_favorites"
        android:textSize="@dimen/small_textSize_sp" />

    <com.ali.rnp.khodemon.MyLibrary.MyTextView
        android:id="@+id/btm_sht_sort_seen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/click_primary"
        android:clickable="true"
        android:text="@string/max_seen"
        android:drawablePadding="25dp"
        android:focusable="true"
        android:padding="15dp"
        app:drawableRightCompat="@drawable/ic_eye"
        android:textSize="@dimen/small_textSize_sp" />


</LinearLayout>