<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.Activities.FilterActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/activity_filter_appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_filter_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.ali.rnp.khodemon.MyLibrary.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/standard_margin_2x"
                android:gravity="right"
                android:text="@string/filtering"
                android:textSize="@dimen/normal_textSize_sp"
                tools:ignore="RtlHardcoded" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <View
        android:id="@+id/activity_filter_line"
        android:layout_width="1dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        android:background="@color/gray_300"
        app:layout_constraintTop_toBottomOf="@id/activity_filter_appBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_filter_rcv_options"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/activity_filter_line"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_filter_appBar" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_filter_rcv_values"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/standard_margin"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/activity_filter_clear_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/activity_filter_line"
        app:layout_constraintTop_toBottomOf="@id/activity_filter_search" />


    <com.ali.rnp.khodemon.MyLibrary.MyEditText
        android:id="@+id/activity_filter_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:gravity="right|center_vertical"
        android:background="@drawable/shape_search_choose_city_edit_text"
        android:hint="@string/search"
        android:maxLines="1"
        android:paddingLeft="@dimen/standard_margin"
        android:paddingRight="@dimen/standard_margin"
        android:textSize="@dimen/small_textSize_sp"
        app:drawableLeftCompat="@drawable/ic_search"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/activity_filter_line"
        app:layout_constraintTop_toBottomOf="@id/activity_filter_appBar"
        tools:ignore="RtlHardcoded" />

    <com.ali.rnp.khodemon.MyLibrary.MyButton
        android:id="@+id/activity_filter_clear_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/gray_100"
        android:text="@string/clear"
        app:drawableLeftCompat="@drawable/ic_sort"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/activity_filter_line" />
</androidx.constraintlayout.widget.ConstraintLayout>